# dedw3n

./: .env.update  .npmrc  .production.env  .replit  .seeded  ADMIN_EXEMPTION_PRODUCTION_GUIDE.md  ARCHITECTURAL_RESTRUCTURING_IMPLEMENTATION_COMPLETE.md  ARCHITECTURAL_RESTRUCTURING_PHASE_2_COMPLETE.md  ARCHITECTURAL_RESTRUCTURING_PHASE_3_COMPLETE.md  ARCHITECTURAL_RESTRUCTURING_PHASE_4_COMPLETE.md  ASSESSMENT_SESSION_ORDER_AND_CORS.md  AUTHENTICATION_SECURITY_DEPLOYMENT_SUMMARY.md  AUTH_ERROR_FIX_REPORT.md  AUTO_CONFIG_PRODUCTION_SUMMARY.md  AUTO_LOGIN_SECURITY_RESOLUTION_REPORT.md  AVATAR_PATH_FIX_ANALYSIS.md  BREVO_WEBHOOK_SETUP.md  BUCKET_CLEANUP_COMPLETE.md  CAPTCHA_MIGRATION_CHANGELOG.md  CART_AUTHENTICATION_ASSESSMENT_REPORT.md  CART_USER_DISPLAY_ISSUE_ANALYSIS.md  CDN_OPTIMIZATION_GUIDE.md  CLEAN_CODING_DATABASE_SYNC_SOLUTION.md  COMPLETE_CUSTOM_TRANSLATION_DEPLOYMENT_GUIDE.md  COMPLETE_TRANSLATION_UNIFICATION_PLAN.md  COMPREHENSIVE_ADMIN_DASHBOARD_ERROR_ASSESSMENT_REPORT.md  COMPREHENSIVE_ALGERIA_CITY_DATABASE_EXPANSION_ERROR_ASSESSMENT_REPORT.md  COMPREHENSIVE_API_BACKEND_ERROR_RESOLUTION_FINAL_REPORT.md  COMPREHENSIVE_API_BACKEND_ERROR_RESOLUTION_REPORT.md  COMPREHENSIVE_AUTHENTICATION_SECURITY_REPORT.md  COMPREHENSIVE_AUTO_RESIZE_IMAGE_ERROR_ASSESSMENT_REPORT.md  COMPREHENSIVE_ERROR_ASSESSMENT_REPORT.md  COMPREHENSIVE_GHOST_PRODUCT_RESOLUTION_REPORT.md  COMPREHENSIVE_LOGOUT_SYSTEM_ERROR_ASSESSMENT_REPORT.md  COMPREHENSIVE_MOBILE_DEVICE_DETECTION_ERROR_ASSESSMENT_REPORT.md  COMPREHENSIVE_MOBILE_RESPONSIVENESS_ERROR_ASSESSMENT_REPORT.md  (+152 more)
client/: index.html
(+898 files in other folders)
